@@ -4,6 +4,7 @@ package com.badlogic.gdx.scenes.scene2d.ui;
 import com.badlogic.gdx.graphics.Color;
 import com.badlogic.gdx.graphics.g2d.Batch;
 import com.badlogic.gdx.graphics.glutils.ShapeRenderer;
+import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.math.Rectangle;
 import com.badlogic.gdx.scenes.scene2d.Actor;
 import com.badlogic.gdx.scenes.scene2d.Touchable;
@@ -143,10 +144,10 @@ public class Container<T extends Actor> extends WidgetGroup {
 			y += (containerHeight - height) / 2;
 
 		if (round) {
-			x = Math.round(x);
-			y = Math.round(y);
-			width = Math.round(width);
-			height = Math.round(height);
+			x = (float)Math.floor(x);
+			y = (float)Math.floor(y);
+			width = (float)Math.ceil(width);
+			height = (float)Math.ceil(height);
 		}
 
 		actor.setBounds(x, y, width, height);
